20000508-00:20 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/harbour.l
     + Added rules so that "optional" won't conflict with identifiers named optional.

20000507-21:20 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * source/compiler/harbour.l
     + Added token "optional"

   * source/compiler/harbour.y
     + Added token "optional", DecParam, DecParamList, OptParams.
     + Added support for optional parameters syntax in declared functions.

   * source/compiler/harbour.c
     + Added logic in hb_compVariableAdd() to deal with optional parameters of declared functions.

   * source/compiler/hbpcode.c
     + Added logic in hb_compStrongType() to deal with optional parameters of declared functions.

   * tests/testwarn.prg
     + Added code to demonstrate usage and warnings of optional parameters in declared functions.

20000507-23:30 CET Patrick Mast <harbour@PatrickMast.com>

   * source/compiler/cmdcheck.c
     + Added -? and -h option for the compiler.
       these options show the Harbour usage page.

20000507-13:35 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * include/hberrors.h
     + Added : #define HB_COMP_WARN_VAL_NOT_USED               20

   * source/compiler/harbour.c
     + Added logic to hb_compOptimizeFrames() to warn about invalid statics usage.

   * source/compiler/hbgenerr.c
     + Added: "3Value of Variable \'%s\' never used"

   * source/compiler/hbpcode.c
     * Enhanced support for statics

   * tests/testwarn.prg
     + Added more code to demonstrate more warnings.

20000507-05:20 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

   * include/hbpcomp.c
     + Added pPrivates to structure FUNCTION.

   * source/compiler/harbour.c
     + Added logic to maintain linked list pPrivates of pFunc.

   * source/compiler/harbour.y
     + Added support for MEMVAR AS ... syntax.

   * source/compiler/hbpcode.c
     + Added static PVAR hb_compPrivateFind( char * szPrivateName )